tests/NormalTests/paczka1/small_fuzzy/61625447.err
Error in line 5: XFFCl9z4Y S144 23,10
Error in line 9: KD7Iwb2 S483 88,2
